syntax = "proto3";

package raft;

service RaftRPC {
  rpc RequestVoteRPC(RequestVote) returns (RequestVoteResponse);
  rpc AppendEntriesRPC(AppendEntry) returns (AppendEntryResponse);
}

message RequestVote {
  uint64 term           = 1;
  uint64 candidate_id   = 2;
  uint64 last_log_index = 3; // index of candidate's last log entry
  uint64 last_log_term  = 4; // term of candidate's last log entry
}

message RequestVoteResponse {
  uint64 term         = 1;
  bool   vote_granted = 2;
  uint64 candidate_id = 3;
}

message Data {
  uint64 value = 1;
}

message Entry {
  uint64 term = 1;
  Data data = 2;
}

message AppendEntry {
  uint64 term            = 1;
  uint64 leader_id       = 2;
  uint64 prev_log_index  = 3;
  uint64 prev_log_term   = 4;
  uint64 commit_index   = 5; // leader's commit index
  repeated Entry entries = 6;
}

message AppendEntryResponse {
  uint64 term         = 1;
  bool   success      = 2;
  uint64 candidate_id = 3;
}
